package DesignPatternStudy.Study01_工厂模式.S3_抽象工厂模式;

/**
 * @author
 * @version 1.0
 * @created 2019/5/17 下午3:55
 **/
public class PorductB1 implements PorductB {
    public void createCar() {
        System.out.println("car B1");
    }
}